# lptrack

./: .env.example  .gitignore  Anchor.toml  README.md  linux.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md
app/: package.json  playwright.config.ts  vitest.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ai-hint-fetcher.tsx  ai-hint.tsx  arena-card.tsx  arena-countdown.tsx  claim-client.tsx  connect-button.tsx  entry-wizard-client.tsx  equity-curve.tsx  ethereum-error-guard.tsx  featured-arena-banner.tsx  hero-background.tsx  ledger.tsx  lenis-provider.tsx  lifecycle-pill.tsx  live-arena-card.tsx  live-leaderboard.tsx  position-logs-feed.tsx  post-wizard-next.tsx  section-how-it-works.tsx  section-why-it-works.tsx  (+4 more)
app/tests/: arena-detail.spec.ts  arenas.spec.ts  entry-wizard.spec.ts  featured-arena.spec.ts  not-connected.spec.ts  og.spec.ts  profile.spec.ts  realtime.spec.ts  smoke.spec.ts  wallet.spec.ts
programs/lp-arena/: Cargo.toml
programs/lp-arena/src/: errors.rs  events.rs  lib.rs  state.rs
scripts/: _util.ts  apply-supabase-migrations.ts  create-long-arena.ts  create-test-arena.ts  full-flow.ts  init-config.ts  list-live-arenas.ts  package-lock.json  package.json  tsconfig.json  verify-creds.sh
services/ai/: package.json  tsconfig.json
services/scoring/: .gitignore  Procfile  README.md  package.json  railway.json  tsconfig.json
specs/: 00-overview.md  01-anchor-program.md  02-lp-agent-integration.md  03-architecture.md  04-ui-guidelines.md  05-ai-ux.md  06-testing.md
specs/ref/: lpagent-llms.txt
(+65 files in other folders)
