[package]
name = "lp-arena"
version = "0.1.0"
description = "LP Arena — PvP Meteora tournaments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lp_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
